worked on about me section, changed background image, removed background on dad picture, fixed gap sizing in mobile view, changed text in about me section

--- a/frontend/src/components-css/Slideshow.css
+++ b/frontend/src/components-css/Slideshow.css
@@ -89,6 +89,7 @@ body {
 }
 
 .welcome-message {
+    text-align: center;
     color: white;
     font-size: 48px;
     position: absolute;
